Add dashboard view of messages sent to participant

--- a/server/dashboard/templates/dashboard/participant.html
+++ b/server/dashboard/templates/dashboard/participant.html
@@ -66,6 +66,13 @@
                             Text Messages
                         </a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link"
+                            href="{% url 'dashboard-cohort-participant-notifications' cohort.id participant.heartsteps_id %}"
+                            >
+                            Notifications
+                        </a>
+                    </li>
                 </ul>
             </nav>
 
