--- a/server/dashboard/templates/dashboard/index.html
+++ b/server/dashboard/templates/dashboard/index.html
@@ -7,6 +7,7 @@
     <thead class="thead-dark">
         <tr>
             <th>Participant</th>
+            <th>Adherence</th>
             <th>Text Messages</th>
             <th>Fitbit</th>
             <th>Mobile App</th>
@@ -31,6 +32,28 @@
                     <dt>Joined date</dt>
                     <dd>{{ participant.date_joined|date }}</dd>
                     {% endif %}
+                </dl>
+            </td>
+            <td>
+                <dl>
+                    <dt>Status</dt>
+                    {% for status in participant.adherence_status %}
+                    <dd>
+                    {% if status.days is not None %}
+                    {{status.title}}: {{status.days}} days ago
+                    {% else %}
+                    {{status.title}}: Never updated
+                    {% endif %}
+                    </dd>
+                    {% endfor %}
+                    <dt>Sent recently</dt>
+                    <dd>
+                    {% if participant.adherence_messages %}
+                    {{participant.adherence_messages}} messages
+                    {% else %}
+                    No messages sent
+                    {% endif %}
+                    </dd>
                 </dl>
             </td>
             <td>
