#97 Saved fitbit watch status locally

--- a/client/src/pages/settings/settings.component.html
+++ b/client/src/pages/settings/settings.component.html
@@ -11,7 +11,7 @@
     <nav>
         <ul>
             <li><button (click)="editFitbitAuthorization()">Fitbit Authorization</button></li>
-            <li><button (click)="editFitbitWatch()">HeartSteps Clockface</button></li>
+            <li><button (click)="editFitbitWatch()">HeartSteps Clock Face</button></li>
         </ul>
     </nav>
     <p>HeartSteps {{buildVersion}}, built on {{buildDate}}</p>
