Change fitbit activity type list order

--- a/client/src/pages/activity-plan/activity-plan-field.component.html
+++ b/client/src/pages/activity-plan/activity-plan-field.component.html
@@ -2,6 +2,7 @@
     <heartsteps-activity-type-field
         formControlName="activity"
         label="Activity type"
+        [activityTypes]="activityTypes"
         >
     </heartsteps-activity-type-field>
     <heartsteps-activity-intensity-field
