--- a/client/src/pages/activity-plan/plan-form.component.html
+++ b/client/src/pages/activity-plan/plan-form.component.html
@@ -6,6 +6,7 @@
     <heartsteps-activity-type-field
         formControlName="activity"
         label="Activity type"
+        [activityTypes]="activityTypes"
         >
     </heartsteps-activity-type-field>
     <heartsteps-activity-intensity-field
