#124 Basic version of opening survey notification

--- a/client/src/pages/settings/settings.component.html
+++ b/client/src/pages/settings/settings.component.html
@@ -20,6 +20,7 @@
     <h3>Testing Area</h3>
     <p>This area is only visible to testing participants.</p>
     <ul>
+        <li><button (click)="testActivitySurvey()">Send Activity Survey</button></li>
         <li><button (click)="testAntisedentaryMessage()">Send Anti Sedentary Message</button></li>
         <li><button (click)="testMorningMessage()">Send Morning Message</button></li>
         <li><button (click)="testWalkingSuggestion()">Send Walking Suggestion</button></li>
