--- a/server/dashboard/templates/dashboard/login.html
+++ b/server/dashboard/templates/dashboard/login.html
@@ -13,24 +13,14 @@
 
     <body>
 
-    {% if messages %}
-        <ul class="messages">
-            {% for message in messages %}
-            <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
-            {% endfor %}
-        </ul>
-    {% endif %}
-
   <h2>Login</h2>
-  <br />
-  <p>Please use your HeartSteps credentials to access the dashboard</p>
-  <br />
-  <br />
+  <p>Use your HeartSteps staff credentials to access the dashboard.</p>    
   <form method="post">
     {% csrf_token %}
     {{ form.as_p }}
     <button type="submit">Login</button>
   </form>
+  <a href="{% url 'password_reset' %}">Reset Password</a>
 </body>
 
 </html>
