#89 Added testable link for walking suggestion surveys

--- a/client/src/pages/settings/settings.component.html
+++ b/client/src/pages/settings/settings.component.html
@@ -24,6 +24,7 @@
         <li><button (click)="testAntisedentaryMessage()">Send Anti Sedentary Message</button></li>
         <li><button (click)="testMorningMessage()">Send Morning Message</button></li>
         <li><button (click)="testWalkingSuggestion()">Send Walking Suggestion</button></li>
+        <li><button (click)="testWalkingSuggestionSurvey()">Send Walking Suggestion Survey</button></li>
         <li><button (click)="testWeeklySurveyMessage()">Send Weekly Survey</button></li>
         <li><button (click)="testBaselineWeekPage()">View Baseline Week Page</button></li>
     </ul>
