Mid-progress adding participant level feature toggles

--- a/server/dashboard/templates/dashboard/participant.html
+++ b/server/dashboard/templates/dashboard/participant.html
@@ -31,7 +31,7 @@
                 <dt>Fitbit Status</dt>
                 <dd>
                     To be displayed!
-                    <a href="">Disable fitbit account</a>
+                    <a href="{% url 'dashboard-cohort-participant-fitbit-disable' cohort.id participant.heartsteps_id %}">Disable fitbit account</a>
                 </dd>
                 <dt>Archived</dt>
                 <dd>
