--- a/server/dashboard/templates/dashboard/participant.html
+++ b/server/dashboard/templates/dashboard/participant.html
@@ -27,7 +27,21 @@
             <h3>Participant Status</h3>
             <dl>
                 <dt>Active</dt>
-                <dd>{% if participant.active %}Active{% else %}Disabled{% endif %}</dd>
+                {% if participant.active %}
+                <dd>
+                    Active
+                    <a href="{% url 'dashboard-cohort-participant-disable' cohort.id participant.heartsteps_id %}">
+                        Disable Participant
+                    </a>
+                </dd>
+                {% else %}
+                <dd>
+                    Disabled
+                    <a href="{% url 'dashboard-cohort-participant-enable' cohort.id participant.heartsteps_id %}">
+                        Enable Participant
+                    </a>                    
+                </dd>
+                {% endif %}
                 <dt>Fitbit Status</dt>
                 <dd>
                     {% if fitbit_authorized %}
@@ -66,9 +80,6 @@
                     Enabled
                     {% else %}
                     Disabled
-                    {% endif %}
-                    {% if configuration.url %}
-                    <a href="{{configuration.url}}">Edit {{configuration.title}}</a>
                     {% endif %}
                 </dd>
                 </li>
