#169 Add draft of closeout summary

--- a/server/dashboard/templates/dashboard/participants.html
+++ b/server/dashboard/templates/dashboard/participants.html
@@ -7,4 +7,5 @@
 <a href="{% url 'dashboard-cohort-participant-create' cohort.id %}" class="nav-link">Add participant</a>
 <a href="{% url 'dashboard-cohort-intervention-summary' cohort.id %}" class="nav-link">Intervention Summaries</a>
 <a href="{% url 'dashboard-cohort-messages-received' cohort.id %}" class="nav-link">Messages Received</a>
+<a href="{% url 'dashboard-cohort-closeout-summary' cohort.id %}" class="nav-link">Closeout Summary</a>
 {% endblock %}
