#169 Add participant status to closeout summary

--- a/server/dashboard/templates/dashboard/closeout-summary.html
+++ b/server/dashboard/templates/dashboard/closeout-summary.html
@@ -27,6 +27,8 @@
                     {{participant.heartsteps_id}}
                 </a>
                 <dl>
+                    <dt>Status</dt>
+                    <dd>{{participant.status}}</dd>
                     <dt>Study Start</dt>
                     <dd>{{participant.study_start}}</dd>
                 </dl>
