--- a/server/dashboard/templates/dashboard/participants.html
+++ b/server/dashboard/templates/dashboard/participants.html
@@ -8,5 +8,6 @@
 <a href="{% url 'dashboard-cohort-intervention-summary' cohort.id %}" class="nav-link">Intervention Summaries</a>
 <a href="{% url 'dashboard-cohort-messages-received' cohort.id %}" class="nav-link">Messages Received</a>
 <a href="{% url 'dashboard-cohort-data-summary' cohort.id %}" class="nav-link">Data Summary</a>
+<a href="{% url 'dashboard-cohort-download' cohort.id %}" class="nav-link">Download</a>
 <a href="{% url 'dashboard-cohort-closeout-summary' cohort.id %}" class="nav-link">Closeout Summary</a>
 {% endblock %}
