Added summaries to dashboard

--- a/server/dashboard/templates/dashboard/download.html
+++ b/server/dashboard/templates/dashboard/download.html
@@ -11,6 +11,7 @@
 
 {% block body %}
 <h2>Export Status for {{cohort.name}}</h2>
+<p>{{total_files}} files exports with {{total_errors}} for {{total_participants}}</p>
 <table class="table">
     <thead>
         <td>Participant</td>
