List all participants in data summary

--- a/server/dashboard/templates/dashboard/data-summary.html
+++ b/server/dashboard/templates/dashboard/data-summary.html
@@ -34,6 +34,8 @@
                 <dl>
                     <dt>Status</dt>
                     <dd>{{participant.status}}</dd>
+                    <dt>Fitbit Account</dt>
+                    <dd>{{participant.fitbit_authorized}}</dd>
                     <dt>Study Start</dt>
                     <dd>{{participant.study_start}}</dd>
                 </dl>
