#166 Add morning message view for debugging purposes

--- a/server/dashboard/templates/dashboard/participant.html
+++ b/server/dashboard/templates/dashboard/participant.html
@@ -105,6 +105,13 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link"
+                            href="{% url 'dashboard-cohort-participant-morning-messages' cohort.id participant.heartsteps_id %}"
+                            >
+                            Morning Messages
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link"
                             href="{% url 'dashboard-cohort-participant-sms-messages' cohort.id participant.heartsteps_id %}"
                             >
                             Text Messages
