#166 Add morning message export

--- a/server/dashboard/templates/dashboard/participant-morning-messages.html
+++ b/server/dashboard/templates/dashboard/participant-morning-messages.html
@@ -29,8 +29,12 @@
                     <dd>{{morning_message.date}}</dd>
                     <dt>Sent:</dt>
                     <dd>{{morning_message.sent}}</dd>
+                    <dt>Received</dt>
+                    <dd>{{morning_message.received}}</dd>
                     <dt>Opened:</dt>
                     <dd>{{morning_message.opened}}</dd>
+                    <dt>Completed</dt>
+                    <dd>{{morning_message.completed}}</dd>
                 </dl>
             </td>
             <td>
